remove storedata API
