# server/nodejs/api/swagger.yaml
@@ -46,33 +46,6 @@ paths:
             $ref: "#/definitions/ErrorResponse"
       x-swagger-router-controller: "Blockmarket"
     x-swagger-router-controller: "blockmarket"
-  /storedata:
-    post:
-      tags:
-      - "Blockmarket"
-      description: "Store an arbitrary piece of data on a decentralized network of\
-        \ data storage warehouses and return the client an array of URLs through which\
-        \ the data can be accessed."
-      operationId: "storedata"
-      parameters:
-      - in: "body"
-        name: "request"
-        required: true
-        schema:
-          $ref: "#/definitions/StoreDataRequest"
-      responses:
-        200:
-          description: "Success"
-          schema:
-            $ref: "#/definitions/StoreDataResponse"
-        default:
-          description: "Error"
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-      security:
-      - token: []
-      x-swagger-router-controller: "Blockmarket"
-    x-swagger-router-controller: "blockmarket"
   /getblock:
     get:
       tags:
@@ -5059,41 +5032,6 @@ definitions:
         type: "string"
         description: "The pass phrase to encrypt the wallet with. It must be at least\
           \ 1 character, but should be long."
-  StoreDataRequest:
-    required:
-    - "data"
-    properties:
-      data:
-        type: "string"
-        description: "The data to be stored on the decentralized storage facility.\
-          \ Max size 500kb."
-      storeLocations:
-        type: "array"
-        description: "Array of data warehousing facilities to use to store the data,\
-          \ valid values: BFAZURE"
-        items:
-          type: "string"
-  StoreDataResponse:
-    required:
-    - "storeLocations"
-    properties:
-      storeLocations:
-        type: "array"
-        description: "Array of objects which describe where data is stored offchain"
-        items:
-          $ref: "#/definitions/DataStoreLocation"
-    example:
-      storeLocations:
-      - dataUrl: "aeiou"
-  DataStoreLocation:
-    required:
-    - "dataUrl"
-    properties:
-      dataUrl:
-        type: "string"
-        description: "URL from which the data can be fetched"
-    example:
-      dataUrl: "aeiou"
   NetworkInfo:
     properties:
       version:
